kfreebsd-downloader (9.0-2) UNRELEASED; urgency=low

  * Remove old kernel on upgrade.

 -- Robert Millan <rmh@debian.org>  Fri, 03 Feb 2012 20:38:06 +0100

kfreebsd-downloader (9.0-1) unstable; urgency=high

  * New upstream release.

 -- Robert Millan <rmh@debian.org>  Fri, 06 Jan 2012 11:17:46 +0100

kfreebsd-downloader (9.0~rc3-2) unstable; urgency=low

  * Change Architecture to "kfreebsd-i386 kfreebsd-amd64" to make
    migration scripts happy.

 -- Robert Millan <rmh@debian.org>  Thu, 15 Dec 2011 19:14:28 +0100

kfreebsd-downloader (9.0~rc3-1) unstable; urgency=low

  * New upstream release.

 -- Robert Millan <rmh@debian.org>  Sat, 10 Dec 2011 20:51:46 +0100

kfreebsd-downloader (9.0~rc2-1) unstable; urgency=low

  * Require suitable version of kldutils.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Dec 2011 11:44:33 +0100

kfreebsd-downloader (9.0~rc2) unstable; urgency=low

  * Initial release.

 -- Robert Millan <rmh@debian.org>  Sat, 03 Dec 2011 18:54:09 +0100