@@ -1,8 +1,9 @@
 kfreebsd-downloader (9.0-2) UNRELEASED; urgency=low
 
   * Remove old kernel on upgrade.
+  * Generate postinst and postrm dynamically.
 
- -- Robert Millan <rmh@debian.org>  Fri, 03 Feb 2012 20:38:06 +0100
+ -- Robert Millan <rmh@debian.org>  Fri, 03 Feb 2012 20:52:34 +0100
 
 kfreebsd-downloader (9.0-1) unstable; urgency=high
 
